@startuml 用户相关实体E-R图

' 设置样式
skinparam defaultFontSize 14
skinparam defaultFontName "Microsoft YaHei"
skinparam classFontSize 14
skinparam classFontName "Microsoft YaHei"
skinparam classAttributeFontSize 12
skinparam classAttributeFontName "Microsoft YaHei"
skinparam backgroundColor white
skinparam linetype spline
skinparam nodesep 80
skinparam ranksep 100
skinparam padding 5
skinparam roundCorner 5

!define Table(name,desc) class name as "desc" << (T,#FFAAAA) >>
!define primary_key(x) <b>x</b>
!define foreign_key(x) <u>x</u>
!define column(x) <i>x</i>

' 用户相关实体定义
Table(users, "users\n(用户表)") {
  primary_key(id) INT
  column(name) VARCHAR
  column(real_name) VARCHAR
  column(phone) VARCHAR
  column(openid) VARCHAR
  column(session_key) VARCHAR
  column(preference) JSON
  column(gender) VARCHAR
  column(id_number) VARCHAR
  foreign_key(current_zoo_id) INT
}

Table(user_preferences, "user_preferences\n(用户偏好表)") {
  primary_key(id) INT
  foreign_key(user_id) INT
  column(is_personalized) BOOLEAN
  column(transport_mode) VARCHAR
  column(favorite_animals) JSON
}

Table(orders, "orders\n(订单信息表)") {
  primary_key(id) INT
  column(order_number) VARCHAR
  foreign_key(user_id) INT
  column(item_name) VARCHAR
  column(quantity) INT
  column(total_amount) DECIMAL
  column(contact_name) VARCHAR
  column(contact_phone) VARCHAR
  column(visit_date) DATE
  column(status) ENUM
}

Table(feedbacks, "feedbacks\n(用户反馈表)") {
  primary_key(id) INT
  foreign_key(user_id) INT
  column(name) VARCHAR
  column(contact) VARCHAR
  column(content) TEXT
  column(rating) INT
}

Table(safety_alerts, "safety_alerts\n(安全预警表)") {
  primary_key(id) INT
  foreign_key(user_id) INT
  foreign_key(zone_id) INT
  column(alert_time) TIMESTAMP
  column(status) ENUM
}

' 关系定义
users "1" -- "0..1" user_preferences : 设置 >
users "1" -- "*" orders : 下单 >
users "1" -- "*" feedbacks : 提交反馈 >
users "1" -- "*" safety_alerts : 接收预警 >

note "图例:\n实体: 浅红色矩形\n主键: <b>粗体</b>\n外键: <u>下划线</u>\n普通字段: <i>斜体</i>" as Legend

@enduml 